--- a/src/input.css
+++ b/src/input.css
@@ -132,3 +132,7 @@ body {
 .animate-scroll {
   animation: scroll 40s linear infinite;
 }
+
+.animate-scroll-mobile {
+  animation: scroll 10s linear infinite;
+}
